client/src/pages/AddGift/style.css
.addGiftForm {
	width: 100%;
	margin: auto;
	display: flex;
	justify-content: center;
}

.add-gift-header {
  font-size: 30px !important;
	color: #2c6e49 !important;
	text-shadow: rgb(5, 20, 43);
	text-align: center;
	font-family: cursive;
  font-weight: bold;
  padding-top: 5%;
}

.bgWrapper {
    background-image: url("./images/thebag.jpg");
    height: 60rem;
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
}

